# chained

./: Cargo.toml  bacon.toml
src/: main.rs  triple.rs
