[package]
name = "chained"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bitflags = "2.9.0"
clap = { version = "4.5.36", features = ["derive"] }
config = "0.15.11"
directories = "6.0.0"
env_logger = "0.11.8"
fuzzy-matcher = "0.3.7"
log = "0.4.27"
nix = { version = "0.29.0", default-features = false, features = ["process"] }
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
target-lexicon = "0.13.2"
thiserror = "2.0.12"
toml = "0.8.20"
url = "2.5.4"
winnow = "0.7.6"
